# HyUi

./: .cruft.json  .env.baserow.example  .env.example  .env.github_actions  .envrc  .flake8  .gitignore  .nojekyll  .pre-commit-config.yaml  .secrets.example  .temp1  6.4.11  CNAME  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.app  Dockerfile.dash  HyUi.sublime-project  HyUi.sublime-workspace  LICENSE  Makefile  README.md  about.html  app.py  compose.dev.yml  compose.yml  config.py  conftest.py  docker-compose.yml  dot_env  environment.yml  hello.py  index.html  listings.json  log.md  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dash.txt  requirements.txt  (+7 more)
api/: pyproject.toml
api/src/api/: baserow.py  config.py  db.py  dependencies.py  logger.py  main.py  mock.py  movement.py  utils.py  validate.py  wards.py
api/src/api/bedbones/: router.py
api/src/api/beds/: bed_defaults.json  department_defaults.json  room_defaults.json  router.py
api/src/api/census/: beds.json  census.json  live.sql  mock.db  router.py  wrangle.py
api/src/api/consults/: __init__.py  live.sql  router.py
api/src/api/demo/: live.sql  mock.json  readme.md  router.py
api/src/api/ed/: router.py
api/src/api/electives/: hypo_help.py  live_case.sql  live_pod.sql  live_preassess.sql  mock.db  mock.ipynb  mock_case.json  mock_preassess.json  mock_sdv.db  router.py  wrangle.py
api/src/api/electives/_archive/: live_future_cases.sql
api/src/api/electives/live_sql/: data_adm.sql  data_census.sql  get_all_pacu.sql  get_echo.sql  get_echo_2.sql  get_elective_surg.sql  get_emap_surg.sql  get_hx.sql  get_icu.sql  get_labs.sql  get_labs_old.sql  get_obs.sql  get_pa_summary.sql  get_pa_summary2.sql  get_pod.sql  get_preassess.sql  get_preassess_summary.sql  get_prev_enc.sql  get_surg.sql  new_hx.sql
api/src/api/electives/supp_data/: axa_codes.csv
api/src/api/hospital/: router.py
api/src/api/hybye/: get_inpatient_admissions.sql  get_inpatient_discharges.sql  mock_data.json  router.py  uch_admits_census.sql
api/src/api/hymind/: router.py
api/src/api/hymind/data/: tap_nonelective_tower.json
api/src/api/perrt/: live.sql  live_consults.sql  live_cpr.sql  live_vitals.sql  mock.h5  mock.ipynb  mock.sql  mock_consults.json  mock_cpr.json  mock_vitals.json  perrt.ipynb  router.py  wrangle.py
api/src/api/perrt/_archive/: live.sql  mock.json
api/src/api/perrt/admission_probability/: functions.py  predictions_script.py
api/src/api/perrt/sql/: current_inpatients.sql  current_inpatients_status.sql  recent_inpatient_vitals.sql  uch_inpatients.sql
api/src/api/ros/: __init__.py  router.py
api/src/api/sitrep/: mock.db  router.py
api/src/api/tests/: test_api.py  test_beds.py  test_cache.py  test_census.py  test_demo.py  test_ed.py  test_electives.py  test_hybye.py  test_perrt.py  test_sitrep.py
code/api/: pyproject.toml
code/api/src/api/: baserow.py  config.py  convert.py  db.py  main.py  wards.py
code/api/src/api/bedbones/: router.py
code/api/src/api/census/: __init__.py  live.sql  router.py  wrangle.py
code/api/src/api/consults/: mock.h5  mock.sql  readme.md  router.py
code/api/src/api/ed/: router.py
code/api/src/api/electives/: __init__.py  live_pod.sql  mock.sql  router.py  wrangle.py
code/api/src/api/hospital/: router.py  wards.py
code/api/src/api/hymind/: router.py
code/api/src/api/perrt/: __init__.py  router.py  wrangle.py
code/api/src/api/ros/: live.sql  router.py
code/api/src/api/sitrep/: __init__.py  mock.sql  model.py  router.py
code/api/src/api/tests/: test_census.py  test_config.py  test_electives.py  test_sitrep.py
code/config/: pyproject.toml
code/config/src/config/: settings.py
code/models/: pyproject.toml
code/models/src/models/: census.py  consults.py  electives.py  hymind.py  perrt.py  ros.py  sitrep.py
code/web/: pyproject.toml
code/web/src/web/: app.py  census.py  config.py  convert.py  hospital.py  main.py
code/web/src/web/assets/: my_edits.css
code/web/src/web/pages/: login.py
code/web/src/web/tests/: test_convert.py
initialise/: pyproject.toml
initialise/src/initialise/: __init__.py  baserow.py  bed_defaults.json  beds.json  beds.py  beds_build.py  beds_make_defaults.py  config.py  db.py  department_defaults.json  departments.json  departments.py  departments_make_defaults.py  discharge_status.py  main.py  readme.md  room_defaults.json  rooms.json  rooms.py  rooms_make_defaults.py
initialise/src/initialise/json/: bed_defaults.json  department_defaults.json  rooms.json
initialise/src/initialise/tests/: test_beds.py  test_beds_build.py
models/: pyproject.toml
models/src/models/: beds.py  census.py  consults.py  demo.py  ed.py  electives.py  hospital.py  hybye.py  hymind.py  mock_cpr.json  perrt.py  ros.py  sitrep.py  taps.py
models/src/models/tests/: test_icu_taps.py  test_sitrep.py  test_taps.py
web/: pyproject.toml
web/src/web/: __init__.py  app.py  celery.py  celery_config.py  celery_startup.py  celery_tasks.py  celeryconfig.py  census.py  config.py  convert.py  debugger.py  gunicorn_config.py  hospital.py  icons.py  ids.py  index.html  logger.py  main.py  nav.py  perrt.py  stores.py  style.py  utils.py
web/src/web/assets/: ag-grid.css  docs.css  my_scripts.js  readme.md  style.css  typography.css
web/src/web/layout/: appshell.py  footer.py  header.py  nav.py
web/src/web/pages/: home.py
web/src/web/pages.bak/: not_found_404.py
web/src/web/pages.bak/abacus/: __init__.py  abacus.py  dept.py  main.py  map.py  node.py  perrt.py  stores.py
web/src/web/pages.bak/census/: widgets.py
web/src/web/pages.bak/demo/: demo.py
web/src/web/pages.bak/ed/: ed.py
web/src/web/pages.bak/electives/: electives.py
web/src/web/pages.bak/home/: home.py
web/src/web/pages.bak/ipc/: ipc.py
web/src/web/pages.bak/login/: __init__.py
web/src/web/pages.bak/perrt/: __init__.py  callbacks.py  perrt.py
web/src/web/pages.bak/sitlist/: __init__.py  callbacks.py  widgets.py
web/src/web/pages/abacus/: __init__.py  abacus.py  callbacks.py  dept.py  discharges.py  main.py  (+7 more)
web/src/web/tests/: test_convert.py  test_sitrep.py
(+611 files in other folders)
