[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hyui-api"
version = "0.0.1"
dependencies = [
    "hyui-models",
    "arrow == 1.2.3",
    "fastapi[all] == 0.85.0",
    "pandas == 1.5.1",
    "pyodbc == 4.0.35",
    "psycopg2-binary == 2.9.5",
    "pydantic == 1.10.2",
    "SQLAlchemy == 1.4.41",
    "sqlmodel == 0.0.8",
    "uvicorn[standard] == 0.18.3",
    "scikit-learn == 1.1.3",
    "imbalanced-learn == 0.10.1",
    "category-encoders == 2.6.0",
    "mlflow == 1.26.1"
]

[project.optional-dependencies]
test = [
    "pre-commit == 2.20.0",
    "pytest == 7.1.3"
]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.json", "*.db"]

[tool.pytest.ini_options]
minversion = "7.1.3"
testpaths = [
    "src/api/tests"
]
