[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hyui-initialise"
version = "0.0.1"
dependencies = [
  "hyui-models",
  "email-validator == 1.3.0",
  "pandas == 1.5.1",
  "psycopg2-binary == 2.9.5",
  "pydantic >= 1.10.2, <2.0",
  "pyodbc == 4.0.35",
  "SQLAlchemy == 1.4.41",
  "requests == 2.28.1"
]

[project.optional-dependencies]
test = [
  "pre-commit == 2.20.0",
  "pytest == 7.1.3"
]

[tool.pytest.ini_options]
minversion = "7.1.3"
testpaths = [
  "src/initialise/tests"
]
