[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hyui-web"
version = "0.0.1"
dependencies = [
    "hyui-models",
    "dash[diskcache] == 2.7.1",
    "dash-bootstrap-components == 1.2.1",
    "dash-mantine-components == 0.11.1",
    "dash-iconify == 0.1.2",
    "dash-cytoscape == 0.3.0",
    "dash-daq == 0.5.0",
    "Flask == 2.2.2",
    "Flask-Caching == 2.0.1",
    "Flask-Login == 0.6.2",
    "gunicorn == 20.1.0",
    "pandas == 1.5.1",
    "pydantic == 1.10.2",
    "requests == 2.28.1",
    "loguru == 0.6.0"

]

[project.optional-dependencies]
test = [
    "pre-commit == 2.20.0",
    "pytest == 7.1.3",
    "types-requests == 2.28.11.2"
]

[tool.setuptools.package-data]
"*" = ["*.css", "*.ico", "*.js"]

[tool.pytest.ini_options]
minversion = "7.1.3"
testpaths = [
    "src/web/tests"
]
