[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hyui-web"
version = "0.0.1"
dependencies = [
  "Flask == 2.3.3",
  "Flask-Caching == 2.0.1",
  "Flask-Login == 0.6.2",
  "celery~=5.2.7",
  "dash-ag-grid ~= 2.0.0",
  "dash-auth ~= 2.0.0",
  "dash-bootstrap-components >= 1.2.1",
  "dash-cytoscape >= 0.3.0",
  "dash-daq >= 0.5.0",
  "dash-iconify >= 0.1.2",
  "dash-mantine-components >= 0.11.1",
  "dash[celery] >= 2.9.0",
  "debugpy == 1.6.7",
  "flower~=1.2.0",
  "gevent == 22.10.2",
  "gunicorn == 20.1.0",
  "hyui-models",
  "loguru == 0.6.0",
  "notifiers == 1.3.3",
  "orjson == 3.8.7",
  "pandas == 1.5.1",
  "pydantic >= 1.10.2, <2.0",
  "redis~=4.5.4",
  "requests == 2.28.1",
  "watchfiles~=0.19.0"
]

[project.optional-dependencies]
test = [
  "pre-commit == 2.20.0",
  "pytest == 7.1.3",
  "types-requests == 2.28.11.2"
]

[tool.pytest.ini_options]
minversion = "7.1.3"
testpaths = [
  "src/web/tests"
]

[tool.setuptools.package-data]
"*" = ["*.css", "*.ico", "*.js"]
