[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hyui-api"
version = "0.0.1"
dependencies = [
    "hyui-models",
    "hyui-utils",
    "arrow == 1.2.3",
    "fastapi[all] == 0.85.0",
    "pandas == 1.5.1",
    "pre-commit == 2.20.0",
    "SQLAlchemy == 1.4.41",
    "sqlmodel == 0.0.8",
    "uvicorn[standard] == 0.18.3"
]

[project.optional-dependencies]
test = [
  "pytest == 7.1.3"
]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.json", "*.db"]

[tool.pytest.ini_options]
minversion = "7.1.3"
testpaths = [
    "src/api/tests"
]
