[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hyui-config"
version = "0.0.1"
dependencies = [
    "pydantic == 1.10.2"
]

[project.optional-dependencies]
test = [
  "pytest == 7.1.3"
]

[tool.pytest.ini_options]
minversion = "7.1.3"
testpaths = [
    "src/config/tests"
]
