[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hyui-models"
version = "0.0.1"
dependencies = [
    "arrow == 1.2.3",
    "sqlmodel == 0.0.8"
]

[project.optional-dependencies]
test = [
  "pytest == 7.1.3"
]

[tool.pytest.ini_options]
minversion = "7.1"
testpaths = [
    "tests"
]
