[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hyui-web"
version = "0.0.1"
dependencies = [
    "hyui-config",
    "hyui-models",
    "dash == 2.6.2",
    "dash-bootstrap-components == 1.2.1",
    "dash-daq == 0.5.0",
    "Flask == 2.2.2",
    "Flask-Caching == 2.0.1",
    "Flask-Login == 0.6.2",
    "gunicorn == 20.1.0",
    "pandas == 1.5.0",
    "pre-commit == 2.20.0",
    "requests == 2.28.1"
]

[project.optional-dependencies]
test = [
    "pytest == 7.1.3",
    "types-requests == 2.28.11.2"
]

[tool.pytest.ini_options]
minversion = "7.1.3"
testpaths = [
    "src/web/tests"
]
